# taze

./: CHANGELOG.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
taze/: __init__.py  config.py  discovery.py  display.py  installers.py  main.py  models.py  parsers.py  pypi.py  writers.py
tests/: test_config.py  test_discovery.py  test_display.py  test_installers.py  test_main.py  test_models.py  test_parsers.py  test_pypi.py  test_writers.py
