[project]
name = "taze"
version = "0.1.0"
description = "🥬 Keep your Python deps fresh"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "packaging>=26.2",
  "rich>=15.0.0",
  "typer>=0.26.7",
]

[project.scripts]
taze = "taze.main:app"

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taze"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
extend-select = ["RUF", "I", "UP", "E", "F"]
