[project]
name = "taze"
version = "0.1.0"
description = "🥬 Keep your Python deps fresh"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "packaging>=26.2",
  "rich>=15.0.0",
  "typer>=0.26.7",
]

[project.scripts]
taze = "taze.main:app"

[dependency-groups]
dev = [
  "prek>=0.4.5",
  "pytest>=9.1.1",
  "ruff>=0.15.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taze"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
line-length = 120
extend-exclude = [".cache", ".venv"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
extend-select = ["RUF", "I", "UP", "E", "F"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["taze"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
