[project]
name = "taze"
version = "0.2.1"
description = "🥬 Keep your Python deps fresh"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "packaging>=26.2",
  "rich>=15.0.0",
  "typer>=0.26.8",
]

[project.scripts]
taze = "taze.main:app"

[dependency-groups]
dev = [
  "commitizen>=4.16.4",
  "prek>=0.4.8",
  "pytest>=9.1.1",
  "ruff>=0.15.21",
  "ty>=0.0.58",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taze"]

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["tests"]

[tool.ruff]
cache-dir = ".cache/ruff"
fix = true
line-length = 120
extend-exclude = [".cache", ".venv"]
output-format = "concise"
unsafe-fixes = true

[tool.ruff.lint]
select = [
  "F", "E", "W",
  "I", "Q", "N",
  "D",
  "ANN", "A", "ASYNC",
  "B", "C4", "ERA", "RET", "RSE", "SIM", "UP",
  "PGH", "RUF", "T20", "TID", "TRY",
  "S",
]
ignore = [
  "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D301",
  "D400", "D401", "D402", "D404", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D412", "D413", "D414", "D416", "D417",
  "S310", "S607"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "D", "S101"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["taze"]
lines-after-imports = 2

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
